--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 <footer>
-    <p>Made with love &<a href="http://jekyllrb.com/" target="_blank">Jekyll</a> and <span class="love">❤</span></p>
+    <p>Made with love, <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> and more <span class="love">❤</span></p>
 </footer>
 <script src="{{ "/assets/js/main.js" | prepend: site.baseurl }}"></script>
